@@ -5,6 +5,7 @@ Wolfpack 12.9.16 Beta (SVN)
   - Fixed bug #0000096 "Wolfpack does not use "Compress Backups" Option".
   - Fixed wolfpack.statics ignoring "exact" parameter in some occasions.
   - Fixed MySql world saves.
+  - Added suport for multi area
  * Definition Changes:
  * Python Script Changes:
   - Fixed a bug in animal taming that prevented taming from gaining on some configurations of python/operating system.
